--- a/Midterm_Project/templates/products.html
+++ b/Midterm_Project/templates/products.html
@@ -25,6 +25,7 @@
         <th scope="col">Product</th>
         <th scope="col">Status</th>
         <th scope="col">Quantity</th>
+         <th scope="col">Action</th>
     </tr>
     </thead>
 </table>
@@ -39,8 +40,46 @@
         <td>{{ row.product }}</td>
         <td>{{ row.status }}</td>
         <td>{{ row.quantity }}</td>
+
+        <td>
+          <a href="/Product_update/{{row.barcode}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#product_modaledit{{row.barcode}}">Edit</a>
+          <a href="/Product_delete/{{row.barcode}}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
+
+
+      </td>
       </tr>
     </tbody>
+       <!-- Modal EDIT-->
+  <div class="modal fade" id="product_modaledit{{row.barcode}}" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="Add_Product_Title">Update Product</h5>
+        </div>
+            <div class="modal-body">
+        <form method="POST" action=/Product_update>
+            <div class="form-group">
+                <label for="Barcode_Edit">Barcode</label>
+                <input type="hidden"  name="id" value="{{row.barcode}}">
+                    <input type="text" class="form-control" id="Barcode_Edit" name="Barcode_Edit" value="{{row.barcode}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="Product_Edit">Product</label>
+                            <input type="text" class="form-control" id="Product_Edit" name="Product_Edit"value="{{row.product}}">
+                            </div>
+                            <div class="form-group">
+                            <label for="Status_Edit">Status</label>
+                            <input type="text" class="form-control" id="Status_Edit" name="Status_Edit" value="{{row.status}}">
+                            </div>
+                        <div class="form-group">
+                    <label for="Quantity_Edit">Quantity</label>
+                <input type="number" class="form-control" id="Quantity_Edit" name="Quantity_Edit" value="{{row.quantity}}">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary" onclick="Product_update();">Update</button>
+            </div>
+        </form>
   </table>
 {% endfor %}
   
