--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,5 +8,5 @@
 {% block content %}
   <h1>Index</h1>
   <p class="important">
-    Joseph Guiyab, Karl Tayoto, Nino Madelo, Clarence Larrosa
+    A smartRabbitry is a place where domestic rabbits are kept and also a rabbit-raising enterprise. 
 {% endblock %}
