Added anti-multiple entries to database

--- a/templates/bootstrap/base.html
+++ b/templates/bootstrap/base.html
@@ -109,7 +109,9 @@
              <div class="job">log_out</div>
            </div>
          </div>
+         <a href="{{url_for('logout')}}">
          <i class='bx bx-log-out' id="log_out" ></i>
+        </a>
      </li>
     </ul>
    </div>
