--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <h4 class="modal-title">Login</h4>
       </div>
       <div class="modal-body">
-    <form method="POST" action=/login_form>
+    <form method="POST" action="{{url_for('login_form')}}">
         <div class ="form-group">
             <label for="Login_Username">Username</label>
             <input type="text" class="form-control" id="Login_Username" name="Login_Username" placeholder="Enter Username" required>
@@ -48,7 +48,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-default" onclick="login_form();">Submit</button>
+        <button type="submit" class="btn btn-default">Submit</button>
       </div>
     </form>
     </div>
@@ -65,7 +65,7 @@
           <h4 class="modal-title">Sign Up</h4>
         </div>
         <div class="modal-body">
-            <form method = "POST" action="/signup_form" oninput='Confirm_Password.setCustomValidity(Confirm_Password.value != Register_Password.value ? "Passwords do not match." : "")'>
+            <form method = "POST" action="{{url_for('signup_form')}}" oninput='Confirm_Password.setCustomValidity(Confirm_Password.value != Register_Password.value ? "Passwords do not match." : "")'>
                 <div class="form-group">
                     <label for="Register_Email">Email address</label>
                     <input type="email" class="form-control" id="Register_Email" name="Register_Email" aria-describedby="emailHelp" placeholder="Enter email" required>
@@ -86,7 +86,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-default" onclick="signup_form();">Submit</button>
+                <button type="submit" class="btn btn-default">Submit</button>
               </div>
             </form>
       </div>
